Make reports capable of calling PostgreSQL
Add the ability for reports to connect to a PostgreSQL database.
The database credentials and setup is configured in the koha-conf.xml
file in the config section using the tags:

pg_database
pg_hostname
pg_port
pg_user
pg_pass

When creating a new report there is a dropdown of report source that
can be set to PostgreSQL and will then use the configured connection
to do the report instead of calling MySQL.

This works for on-screen reports, but not for export and probably fails
in other cases as well. It also relies on MySQL and PostgreSQL queries
being fairly similar in syntax, so implementing for other kinds of
sources would probably require a fairly substantial rewrite.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/guided_reports_start.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/guided_reports_start.tt
@@ -924,6 +924,11 @@ canned reports and writing custom SQL reports.</p>
 </select>
 </li>[% END %]
     <li><label for="notes">Notes:</label> <textarea id="notes" name="notes" cols="50" rows="2">[% notes | html %]</textarea></li>
+    <li><label for="report_type">Report source</label>
+    <select name="report_type" id="report_type">
+    <option value="1">Tabular (Koha)</option>
+    <option value="PG">PostgreSQL</option>
+    </select>
 </ol>
 </fieldset>
 <fieldset class="rows">
@@ -999,6 +1004,16 @@ canned reports and writing custom SQL reports.</p>
 </select>
 </li>[% END %]
 <li><label for="notes">Notes:</label><textarea id="notes" name="notes" cols="50" rows="2">[% notes | html %]</textarea></li>
+    <li><label for="type">Report source:</label>
+    <select name="report_type" id="report_type">
+    [% IF (report_type == "PG") %]
+    <option value="1">Tabular (Koha)</option>
+    <option value="PG" selected="selected">PostgreSQL</option>
+    [% ELSE %]
+    <option value="1" selected="selected">Tabular (Koha)</option>
+    <option value="PG">PostgreSQL</option>
+    [% END %]
+    </select>
 </ol>
 </fieldset>
 
